# api/rest/oas_operations_gen.go
@@ -6,5 +6,6 @@ package rest
 type OperationName = string
 
 const (
+	GetConfigOperation OperationName = "GetConfig"
 	GetHealthOperation OperationName = "GetHealth"
 )
